--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </tr>
             <tr>
                 <td id="secNo">
-                    <span style='font-size:80px;' class="secretNo">&#128386;</span>
+                    <span style='font-size:80px;' class="secretNo">?</span>
                     
                 </td>
             </tr> 
